--- a/backend/directory-service/src/main/resources/application-local-h2.properties
+++ b/backend/directory-service/src/main/resources/application-local-h2.properties
@@ -1,5 +1,5 @@
 # H2 database configuration
-spring.datasource.url=jdbc:h2:mem:saas
+spring.datasource.url=jdbc:h2:mem:saas-directory
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
