product hiding + backend optimizations

--- a/backend/product-service/src/main/resources/application.properties
+++ b/backend/product-service/src/main/resources/application.properties
@@ -7,3 +7,7 @@ server.port=8082
 # JWT Token Configuration
 # =============================================================================================
 saas.security.jwt.key.secret=SlJkfja7si7d4lfqIDe5PAIZXWiyRqAu6nmOKYRCZtE=
+
+#----------------------------------------------------------------------------------------
+# STORAGE
+nati.storage.upload=file
