--- a/backend/product-service/src/main/resources/application-local-h2.properties
+++ b/backend/product-service/src/main/resources/application-local-h2.properties
@@ -10,3 +10,7 @@ spring.jpa.defer-datasource-initialization=true
 
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
+
+#----------------------------------------------------------------------------------------
+# STORAGE
+nati.storage.upload=file
