--- a/backend/directory-service/src/main/resources/application-production.properties
+++ b/backend/directory-service/src/main/resources/application-production.properties
@@ -11,4 +11,4 @@ spring.sql.init.mode=never
 
 #----------------------------------------------------------------------------------------
 
-server.servlet.context-path=/server
+server.servlet.context-path=/server/nati/directory
