--- a/backend/product-service/src/main/resources/application-production.properties
+++ b/backend/product-service/src/main/resources/application-production.properties
@@ -15,4 +15,4 @@ nati.storage.upload=file
 
 #----------------------------------------------------------------------------------------
 
-server.servlet.context-path=/server
+server.servlet.context-path=/server/nati/product
