--- a/backend/product-service/src/main/resources/application.properties
+++ b/backend/product-service/src/main/resources/application.properties
@@ -11,3 +11,6 @@ saas.security.jwt.key.secret=SlJkfja7si7d4lfqIDe5PAIZXWiyRqAu6nmOKYRCZtE=
 #----------------------------------------------------------------------------------------
 # STORAGE
 nati.storage.upload=file
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=80MB
