--- a/backend/directory-service/src/main/resources/application.properties
+++ b/backend/directory-service/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8081
 # AUTHENTICATION
 # =============================================================================================
 # JWT Token Configuration
-# Access Token expiration time in milliseconds (here, 1 days)
+# Access Token expiration time in milliseconds (here, 2 minutes)
 # Refresh Token expiration time in milliseconds (here, 7 days)
 # =============================================================================================
 saas.security.jwt.key.secret=SlJkfja7si7d4lfqIDe5PAIZXWiyRqAu6nmOKYRCZtE=
