[frontend] fix infinite refresh-token call on login

--- a/backend/directory-service/src/main/resources/application.properties
+++ b/backend/directory-service/src/main/resources/application.properties
@@ -9,5 +9,5 @@ server.port=8081
 # Refresh Token expiration time in milliseconds (here, 7 days)
 # =============================================================================================
 saas.security.jwt.key.secret=SlJkfja7si7d4lfqIDe5PAIZXWiyRqAu6nmOKYRCZtE=
-saas.security.jwt.expiration=120000
+saas.security.jwt.expiration=86400000
 saas.security.jwt.refresh.expiration=604800000
