[Fullstack] Continuation of pix payment work

--- a/backend/product-service/src/main/resources/application-local-h2.properties
+++ b/backend/product-service/src/main/resources/application-local-h2.properties
@@ -11,3 +11,6 @@ spring.h2.console.settings.web-allow-others=true
 #----------------------------------------------------------------------------------------
 # STORAGE
 nati.storage.upload=file
+#----------------------------------------------------------------------------------------
+# PROXIES
+nati.proxy.directory.baseUrl=http://localhost:8081
