[Devops] Fix dockerfile

--- a/backend/product-service/Dockerfile
+++ b/backend/product-service/Dockerfile
@@ -14,7 +14,7 @@ RUN chmod +x gradlew
 
 # Run the build, skipping tests
 WORKDIR /app/product-service
-RUN ./gradlew build -x test && rm -rf ~/.gradle/caches
+RUN ../gradlew build -x test && rm -rf ~/.gradle/caches
 
 # Stage 2: Runtime
 FROM amazoncorretto:21-alpine
