add natiart.payment.asaas.apikey to test application.properties

--- a/backend/directory-service/src/test/resources/application.properties
+++ b/backend/directory-service/src/test/resources/application.properties
@@ -11,3 +11,5 @@ spring.sql.init.mode=never
 saas.security.jwt.key.secret=SlJkfja7si7d4lfqIDe5PAIZXWiyRqAu6nmOKYRCZtE=
 saas.security.jwt.expiration=120000
 saas.security.jwt.refresh.expiration=604800000
+
+natiart.payment.asaas.apikey=fjdskfsiutghrsufilkdhiusfhsufih
