--- a/frontend/natiart-app/package.json
+++ b/frontend/natiart-app/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^19.0.1",
     "@angular/platform-browser-dynamic": "^19.0.1",
     "@angular/router": "^19.0.1",
+    "canvas-confetti": "^1.9.3",
     "heic2any": "^0.0.4",
     "rxjs": "~7.8.1",
     "tslib": "^2.8.1",
@@ -33,6 +34,7 @@
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/jasmine": "~5.1.5",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.4.0",
