--- a/backend/product-service/src/main/resources/application.properties
+++ b/backend/product-service/src/main/resources/application.properties
@@ -18,3 +18,5 @@ melhorenvio.api.token=eyJ0eXAiOiJKV1QiLCJhbGciOiJSUzI1NiJ9.eyJhdWQiOiI5NTYiLCJqd
 #----------------------------------------------------------------------------------------
 # PRODUCT PAYMENT
 natiart.payment.asaas.apikey=${NATIART_PAYMENT_ASAAS_APIKEY}
+
+directory.service.url=http://localhost:8080
