[Backend] Update dockerfiles

--- a/backend/product-service/Dockerfile
+++ b/backend/product-service/Dockerfile
@@ -1,27 +1,36 @@
 # Stage 1: Build
-FROM gradle:8.12.0-jdk21-alpine AS build
+FROM gradle:9.1-jdk25-alpine AS build
 WORKDIR /app
 
-# Copy only the necessary files for Gradle build (gradle wrapper + build files)
-COPY backend/gradle gradle
+# Copy Gradle wrapper and build files first for caching
+COPY backend/gradle/ gradle/
 COPY backend/gradlew gradlew
 COPY backend/settings.gradle.kts settings.gradle.kts
 COPY backend/build.gradle.kts build.gradle.kts
-COPY backend/product-service product-service
 
-# Make sure gradlew is executable
-RUN chmod +x gradlew
+# Download dependencies to cache them
+RUN ./gradlew --no-daemon dependencies
 
-# Run the build, skipping tests
+# Copy source code
+COPY backend/product-service product-service/
+
+# Build the application, skipping tests
 WORKDIR /app/product-service
-RUN ../gradlew build -x test && rm -rf ~/.gradle/caches
+RUN ../gradlew build -x test --no-daemon
 
 # Stage 2: Runtime
-FROM amazoncorretto:21-alpine
+FROM amazoncorretto:25-alpine
 WORKDIR /app
 
-# Copy the built JAR file from the build stage
-COPY --from=build /app/product-service/build/libs/*.jar /app/
+# Create non-root user for security
+RUN addgroup -S appgroup && adduser -S appuser -G appgroup
+USER appuser
 
-# Run the application
-ENTRYPOINT ["java", "-jar", "/app/product-service.jar"]
+# Copy only the built JAR from the build stage
+COPY --from=build --chown=appuser:appgroup /app/product-service/build/libs/*.jar app.jar
+
+# Expose the default Spring Boot port
+EXPOSE 8080
+
+# Optimize JVM flags for Spring Boot in a container
+ENTRYPOINT ["java", "-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=75.0", "-jar", "app.jar"]
