[Backend] Fix startup warnings

--- a/backend/directory-service/src/main/resources/application-local-h2.properties
+++ b/backend/directory-service/src/main/resources/application-local-h2.properties
@@ -1,12 +1,11 @@
 # H2 database configuration
-spring.datasource.url=jdbc:h2:mem:saas-directory
+spring.datasource.url=jdbc:h2:mem:saas-directory;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.connection-test-query=SELECT 1
 
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 
@@ -16,6 +15,5 @@ spring.h2.console.settings.web-allow-others=true
 spring.datasource.hikari.minimum-idle=10
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=1800000
 
