--- a/backend/directory-service/src/main/resources/application.properties
+++ b/backend/directory-service/src/main/resources/application.properties
@@ -11,6 +11,8 @@ saas.security.jwt.key.secret=SlJkfja7si7d4lfqIDe5PAIZXWiyRqAu6nmOKYRCZtE=
 saas.security.jwt.expiration=86400000
 saas.security.jwt.refresh.expiration=604800000
 
+spring.jpa.open-in-view=false
+
 #----------------------------------------------------------------------------------------
 # PRODUCT PAYMENT
 natiart.payment.asaas.apikey=${NATIART_PAYMENT_ASAAS_APIKEY}
