--- a/backend/product-service/src/main/resources/application.properties
+++ b/backend/product-service/src/main/resources/application.properties
@@ -6,6 +6,7 @@ server.port=8082
 # JWT Token Configuration
 # =============================================================================================
 saas.security.jwt.key.secret=SlJkfja7si7d4lfqIDe5PAIZXWiyRqAu6nmOKYRCZtE=
+spring.jpa.open-in-view=false
 #----------------------------------------------------------------------------------------
 # STORAGE
 nati.storage.upload=file
